...
    }

    enum DebugSampleData {
        static let characters = [
            Character(
                id: 1,
                name: "Spider-Man",
                description: Localizable.Demo.spiderManDescription,
                imageURL: nil,
                comics: references("Amazing Fantasy", "The Amazing Spider-Man", "Secret Wars"),
                series: references("Spider-Verse", "Ultimate Spider-Man")
            ),
            Character(
...
